# finance-lab

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-brief.yml
config/: coverage.yaml  portfolio.example.yaml  settings.yaml  sources.yaml  targets.yaml  watchlist.yaml
docs/: index.html
launchd/: com.finlab.alerts.plist
research/templates/: nota_cobertura.md
scripts/: _bootstrap.py  build_dashboard.py  daily_brief.py  intraday_alerts.py  new_note.py  weekly_portfolio.py
src/finlab/: __init__.py  config.py
src/finlab/alerts/: dispatch.py  rules.py
src/finlab/brief/: daily.py  render.py
src/finlab/calendar/: econ.py
src/finlab/dashboard/: build.py  render.py
src/finlab/data/: fundamentals.py  macro.py  news.py  prices.py
src/finlab/mail/: smtp.py
src/finlab/portfolio/: holdings.py  metrics.py  rebalance.py
