[project]
name = "finance-lab"
version = "0.1.0"
description = "Sistema personal de equity research + gestión de cartera de Jero (UTDT)"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.40",
    "requests>=2.31",
    "feedparser>=6.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "pandas>=2.0",
    "tabulate>=0.9",
]

[tool.finlab]
# Marca la raíz del proyecto para finlab.config
root = "."
